--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@
 *.sln.docstates
 
 #Bot token exclusion
-bottoken.txt
+*bottoken.txt
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
