--- a/AYAYABot/appsettings.json
+++ b/AYAYABot/appsettings.json
@@ -1,4 +1,10 @@
 {
   "ayayaEmoteNames": "ayaya;cutie;cute",
-  "botTokenFile": "bottoken.txt"
+  "botTokenFile": "bottoken.txt",
+  "resourceFolder": "resources/",
+  "welcomeImage": "AYAYA.png",
+  "welcomeMessage": "Welcome to the server cutie!",
+  "ownerGuid": "154609133805371393",
+  "shutdownMessage": "Goodnight papi!",
+  "shutdownCommand": "ayaya goodnight"
 }
