Finished getting the partial tts randomizer working.

--- a/AYAYABot/appsettings.json
+++ b/AYAYABot/appsettings.json
@@ -1,10 +1,15 @@
 {
-  "ayayaEmoteNames": "ayaya;cutie;cute",
+  "ayayaEmoteNames": "ayaya;cutie;cute", //; separated list
   "botTokenFile": "bottoken.txt",
   "resourceFolder": "resources/",
   "welcomeImage": "AYAYA.png",
   "welcomeMessage": "Welcome to the server cutie!",
   "ownerGuid": "154609133805371393",
   "shutdownMessage": "Goodnight papi!",
-  "shutdownCommand": "ayaya goodnight"
+  "shutdownCommand": "ayaya goodnight",
+  "backgroundThreadShutdownTimer": "2000", //In ms
+  "randomTTSMaxTimer": "60000", //In ms --30 min 1800000
+  "randomTTSMinTimer": "30000", //In ms --5 min 300000
+  "randomTTSEventChance": "50", //This should be between 0 and 100
+  "randomTTSMessages": "AYAYA AYAYA AYAYA AYAYA AYAYA AYAYA AYAYA AYAYA;Calling all cuties, please report to my DMs;Aren't you looking cute today;If you haven't watched Kin-iro Mosaic already, I would suggest it;Did you know my actual name is Karen?;gnikodin cheered! x 300;I just can't help but crourb crourb crourb crourb crourb crourb'" //; separated list
 }
