Improved the config manager so that it can pull json lists from the config file.

--- a/AYAYABot/appsettings.json
+++ b/AYAYABot/appsettings.json
@@ -1,15 +1,27 @@
 {
+  "": "",
   "ayayaEmoteNames": "ayaya;cutie;cute", //; separated list
-  "botTokenFile": "bottoken.txt",
-  "resourceFolder": "resources/",
-  "welcomeImage": "AYAYA.png",
-  "welcomeMessage": "Welcome to the server cutie!",
-  "ownerGuid": "154609133805371393",
-  "shutdownMessage": "Goodnight papi!",
-  "shutdownCommand": "ayaya goodnight",
   "backgroundThreadShutdownTimer": "2000", //In ms
-  "randomTTSMaxTimer": "60000", //In ms --30 min 1800000
-  "randomTTSMinTimer": "30000", //In ms --5 min 300000
+  "botTokenFile": "bottoken.txt",
+  "ownerGuid": "154609133805371393",
   "randomTTSEventChance": "50", //This should be between 0 and 100
-  "randomTTSMessages": "AYAYA AYAYA AYAYA AYAYA AYAYA AYAYA AYAYA AYAYA;Calling all cuties, please report to my DMs;Aren't you looking cute today;If you haven't watched Kin-iro Mosaic already, I would suggest it;Did you know my actual name is Karen?;gnikodin cheered! x 300;I just can't help but crourb crourb crourb crourb crourb crourb'" //; separated list
+  "randomTTSMaxTimer": "1800000", //In ms --30 min 1800000
+  "randomTTSMessages": [
+    "AYAYA AYAYA AYAYA AYAYA AYAYA AYAYA AYAYA AYAYA",
+    "Calling all cuties, please report to my DMs",
+    "Aren't you looking cute today",
+    "If you haven't watched Kin-iro Mosaic already, I would suggest it",
+    "Did you know my actual name is Karen?",
+    "gnikodin cheered! x 300;I just can't help but crourb crourb crourb crourb crourb crourb",
+    "gnikodin donated $3.33 - TICHDVDXTCHE. TICHDVDXTCHE. TICHDVDXTCHE. TICHDVDXTCHE. crourb",
+    "Luigi hated Mario. He would never say it aloud. Or tell any of their closest friends. It would always stay to himself in the comfort of his journal (aka diary)."
+  ],
+  "randomTTSMinTimer": "300000", //In ms --5 min 300000
+  "randomTTSRestrictedTimeEnd": "10:30:00 am", //Uses HH:mm:ss tt format
+  "randomTTSRestrictedTimeStart": "00:00:00 am", //Uses HH:mm:ss tt format
+  "resourceFolder": "resources/",
+  "shutdownCommand": "ayaya goodnight",
+  "shutdownMessage": "Goodnight papi!",
+  "welcomeImage": "AYAYA.png",
+  "welcomeMessage": "Welcome to the server cutie!"
 }
