--- a/AYAYABot/appsettings.json
+++ b/AYAYABot/appsettings.json
@@ -1,11 +1,11 @@
 {
-  "": "",
   "ayayaEmoteNames": "ayaya;cutie;cute", //; separated list
   "backgroundThreadShutdownTimer": "2000", //In ms
+  "backgroundThreadSleep": "5000", //In ms
   "botTokenFile": "bottoken.txt",
   "ownerGuid": "154609133805371393",
   "randomTTSEventChance": "50", //This should be between 0 and 100
-  "randomTTSMaxTimer": "1800000", //In ms --30 min 1800000
+  "randomTTSMaxTimer": "43200000", //In ms --12 hours 43200000
   "randomTTSMessages": [
     "AYAYA AYAYA AYAYA AYAYA AYAYA AYAYA AYAYA AYAYA",
     "Calling all cuties, please report to my DMs",
@@ -16,12 +16,21 @@
     "gnikodin donated $3.33 - TICHDVDXTCHE. TICHDVDXTCHE. TICHDVDXTCHE. TICHDVDXTCHE. crourb",
     "Luigi hated Mario. He would never say it aloud. Or tell any of their closest friends. It would always stay to himself in the comfort of his journal (aka diary)."
   ],
-  "randomTTSMinTimer": "300000", //In ms --5 min 300000
+  "randomTTSMinTimer": "21600000", //In ms --6 hours 21600000
   "randomTTSRestrictedTimeEnd": "10:30:00 am", //Uses HH:mm:ss tt format
   "randomTTSRestrictedTimeStart": "00:00:00 am", //Uses HH:mm:ss tt format
   "resourceFolder": "resources/",
   "shutdownCommand": "ayaya goodnight",
   "shutdownMessage": "Goodnight papi!",
+  "voiceJoinEventChance": "90", //This should be between 0 and 100
+  "voiceJoinJoinDelay": "8000", //In ms --8 sec is 8000
+  "voiceJoinMaxTimer": "60000", //In ms --5 hours is 18000000
+  "voiceJoinMessageResource": [ //These should be file names in the resources folder
+    "ayaya.wav"
+  ],
+  "voiceJoinMinTimer": "30000", //In ms --
+  "voiceJoinPollTimer": "30000", //In ms --30 sec is 30000
+  "voiceJoinSpeakDelay": "2000", //In ms --5 sec is 5000
   "welcomeImage": "AYAYA.png",
   "welcomeMessage": "Welcome to the server cutie!"
 }
