--- a/AYAYABot/appsettings.json
+++ b/AYAYABot/appsettings.json
@@ -24,11 +24,15 @@
   "shutdownMessage": "Goodnight papi!",
   "voiceJoinEventChance": "90", //This should be between 0 and 100
   "voiceJoinJoinDelay": "8000", //In ms --8 sec is 8000
-  "voiceJoinMaxTimer": "60000", //In ms --5 hours is 18000000
+  "voiceJoinMaxTimer": "172800000", //In ms --172800000 is 2 days
   "voiceJoinMessageResource": [ //These should be file names in the resources folder
-    "ayaya.wav"
+    "ayaya.wav",
+    "niconico.wav",
+    "uwus.wav",
+    "pogchamp.wav",
+    "araara.wav"
   ],
-  "voiceJoinMinTimer": "30000", //In ms --
+  "voiceJoinMinTimer": "43200000", //In ms --43200000 is 12 hours
   "voiceJoinPollTimer": "30000", //In ms --30 sec is 30000
   "voiceJoinSpeakDelay": "2000", //In ms --5 sec is 5000
   "welcomeImage": "AYAYA.png",
