Updated the appsettings.json to include instructions for the bottoken.txt file.

--- a/AYAYABot/appsettings.json
+++ b/AYAYABot/appsettings.json
@@ -2,7 +2,7 @@
   "ayayaEmoteNames": "ayaya;cutie;cute", //; separated list
   "backgroundThreadShutdownTimer": "2000", //In ms
   "backgroundThreadSleep": "5000", //In ms
-  "botTokenFile": "bottoken.txt",
+  "botTokenFile": "bottoken.txt", //You will need to create this file yourself and add the bots discord token inside of it as the only line in the file
   "ownerGuid": "154609133805371393",
   "randomTTSEventChance": "50", //This should be between 0 and 100
   "randomTTSMaxTimer": "43200000", //In ms --12 hours 43200000
