--- a/AYAYABot/appsettings.json
+++ b/AYAYABot/appsettings.json
@@ -4,6 +4,10 @@
   "backgroundThreadSleep": "5000", //In ms
   "botTokenFile": "bottoken.txt", //You will need to create this file yourself and add the bots discord token inside of it as the only line in the file
   "ownerGuid": "154609133805371393",
+  "papiHelloMessageResource": [
+    ""
+  ],
+  "papiHelloMinTimer": "86400000", //In ms --86400000 is one day
   "randomTTSEventChance": "50", //This should be between 0 and 100
   "randomTTSMaxTimer": "43200000", //In ms --12 hours 43200000
   "randomTTSMessages": [
