Finished working on the hello papi module.

--- a/AYAYABot/appsettings.json
+++ b/AYAYABot/appsettings.json
@@ -5,7 +5,7 @@
   "botTokenFile": "bottoken.txt", //You will need to create this file yourself and add the bots discord token inside of it as the only line in the file
   "ownerGuid": "154609133805371393",
   "papiHelloMessageResource": [
-    ""
+    "baited.wav"
   ],
   "papiHelloMinTimer": "86400000", //In ms --86400000 is one day
   "randomTTSEventChance": "50", //This should be between 0 and 100
