--- a/AYAYABot/appsettings.json
+++ b/AYAYABot/appsettings.json
@@ -8,6 +8,7 @@
     "baited.wav"
   ],
   "papiHelloMinTimer": "86400000", //In ms --86400000 is one day
+  "papiHelloCooldown": "7200000", //In ms --2 hours 7200000
   "randomTTSEventChance": "50", //This should be between 0 and 100
   "randomTTSMaxTimer": "43200000", //In ms --12 hours 43200000
   "randomTTSMessages": [
