Upgraded logging so that it writes to a file in addition to the console.

--- a/AYAYABot/appsettings.json
+++ b/AYAYABot/appsettings.json
@@ -3,6 +3,9 @@
   "backgroundThreadShutdownTimer": "2000", //In ms
   "backgroundThreadSleep": "5000", //In ms
   "botTokenFile": "bottoken.txt", //You will need to create this file yourself and add the bots discord token inside of it as the only line in the file
+  "loggingLevel": "1", //Integer that represents one of the following values (DEBUG = 0, INFO = 1, WARN = 2, ERROR = 3)
+  "logFile": "ayayaBotLog.txt", //Relative file path of the logging file
+  "logProcessSleep": "20", //In ms
   "ownerGuid": "154609133805371393",
   "papiHelloMessageResource": [
     "baited.wav"
